--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   },
   "devDependencies": {
     "path": "^0.12.7",
+    "serverless-offline": "^12.0.2",
     "tsup": "^6.5.0",
     "tsx": "^3.12.1",
     "yarn": "^1.22.19"
